# TetherCode

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  STATUS.md  package-lock.json  package.json
.github/: CODE_OF_CONDUCT.md  pull_request_template.md
apps/desktop/: Cargo.toml
apps/desktop/macos/: TetherCodeApp.swift
apps/desktop/src/: config.rs  main.rs  platform_setup.rs  setup.rs  supervisor.rs
contracts/: agent-icon-policy.json
docs/: app-review-notes.md  bridge-ui-surfaces.md  codex-app-server-cli-gap-tracker.md  eas-builds.md  engineering-improvement-checklist.md  macos-desktop-app.md  open-source-license-requirements.md  opencode-integration-architecture.md  (+6 more)
services/rust-bridge/: .env.example  Cargo.toml  package.json
services/rust-bridge/src/: agui.rs  agui_generated.rs  app_server.rs  app_state.rs  attachments.rs  backend_runtime.rs  boundary_integration.rs  bridge_protocol.rs  client_hub.rs  config.rs  coverage_main_backends.rs  coverage_main_mappings.rs  coverage_main_orchestration.rs  coverage_main_surfaces.rs  cursor_auth.rs  engine_normalization.rs  github_auth.rs  health.rs  http_routes.rs  interaction_validation.rs  live_sync.rs  main.rs  main_tests.rs  observability.rs  opencode_backend.rs  opencode_mappings.rs  pairing.rs  path_policy.rs  preview.rs  preview_proxy.rs  protocol_constants.rs  push.rs  push_delivery.rs  queue_service.rs  replay.rs  resource_limits.rs  rollout_sync.rs  rpc.rs  runtime_backend.rs  storage.rs  (+3 more)
services/rust-bridge/src/acp/: config.rs  events.rs  handlers.rs  identity.rs  interactions.rs  manager.rs  mod.rs  runtime.rs  session.rs  snapshot.rs
services/rust-bridge/src/services/: git.rs  mod.rs  terminal.rs  update.rs
services/rust-bridge/tests/fixtures/: fake-app-server.sh
(+344 files in other folders)
