[package]
name = "tethercode-desktop"
version = "0.1.0"
edition = "2021"
description = "Native desktop control surface for the TetherCode bridge"
license = "MIT"

[[bin]]
name = "tethercode"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
fs2 = "0.4.3"
getrandom = "0.3"
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sysinfo = { version = "0.39.6", default-features = false, features = ["system"] }
ureq = { version = "3.3.0", default-features = false, features = ["json"] }

[dev-dependencies]
tempfile = "3.23"
