[package]
name = "codex-rust-bridge"
version = "5.2.3"
edition = "2021"
rust-version = "1.97.1"
license = "MIT"
repository = "https://github.com/Mohit-Patil/clawdex-mobile"
publish = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(coverage_nightly)"] }

[dependencies]
async-process = "2.5"
axum = { version = "0.8", features = ["ws", "http1", "tokio", "multipart"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["clock", "serde"] }
futures-util = "0.3"
getrandom = "0.3"
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
shlex = "1"
thiserror = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
regex = "1"
qr2term = "0.3"
rustix = { version = "1.1", features = ["fs"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
uuid = { version = "1", features = ["v4"] }
agent-client-protocol = { version = "1.2.0", features = ["unstable_elicitation"] }
